// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should calculate the selection with respect to the image 1`] = `
<DocumentFragment>
  <div
    data-testid="rectangle-selection"
  >
    <img
      height="360"
      src="//:0"
      width="640"
    />
  </div>
</DocumentFragment>
`;

exports[`The component should render with image source 1`] = `
<DocumentFragment>
  <div
    data-testid="rectangle-selection"
  >
    <img
      height="360"
      src="//:0"
      width="640"
    />
  </div>
</DocumentFragment>
`;

exports[`The component should render with initial selection 1`] = `
<DocumentFragment>
  <div
    data-testid="rectangle-selection"
    class="rectangle hasBackdrop"
    role="button"
    style="left: 100px; top: 66.66666666666667px; width: 500px; height: 266.6666666666667px;"
  >
    <img
      height="360"
      src="//:0"
      width="640"
    />
  </div>
</DocumentFragment>
`;
